<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.5.6</version>
		<relativePath/>
	</parent>
	<groupId>org.voninc</groupId>
	<artifactId>contribot</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>contribot</name>
	<description>GitHub Good-First-Issue notifier bot</description>
	<url>https://github.com/khawaja-abdullah/contribot</url>
	<licenses>
		<license>
			<name>Apache License, Version 2.0</name>
			<url>https://www.apache.org/licenses/LICENSE-2.0</url>
			<distribution>repo</distribution>
		</license>
	</licenses>
	<developers>
		<developer>
			<id>khawaja-abdullah</id>
			<name>Khawaja Abdullah</name>
			<email>khawaja.abdullah.ansar@gmail.com</email>
		</developer>
	</developers>
	<scm>
		<connection>scm:git:git://github.com/khawaja-abdullah/contribot.git</connection>
		<developerConnection>scm:git:ssh://github.com/khawaja-abdullah/contribot.git</developerConnection>
		<url>https://github.com/khawaja-abdullah/contribot</url>
		<tag>HEAD</tag>
	</scm>
	<properties>
		<java.version>21</java.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter</artifactId>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.kohsuke/github-api -->
		<dependency>
			<groupId>org.kohsuke</groupId>
			<artifactId>github-api</artifactId>
			<version>2.0-rc.5</version>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>com.mycila</groupId>
				<artifactId>license-maven-plugin</artifactId>
				<version>5.0.0</version>
				<configuration>
					<strictCheck>true</strictCheck>
					<licenseSets>
						<licenseSet>
							<header>src/license-header.txt</header>
							<includes>
								<include>**/*.java</include>
							</includes>
							<properties>
								<year>2025</year>
								<name>Von Inc</name>
							</properties>
						</licenseSet>
					</licenseSets>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
		</plugins>
	</build>

</project>